--- a/style.css
+++ b/style.css
@@ -244,3 +244,35 @@ body{
 .purchase-sub:hover{
     color: black;
 }
+}
+.purchase1-sub:hover{
+    color: black;
+}
+}
+.purchase2-sub:hover{
+    color: black;
+}
+}
+.purchase3-sub:hover{
+    color: black;
+}
+}
+.purchase4-sub:hover{
+    color: black;
+}
+}
+.purchase5-sub:hover{
+    color: black;
+}
+}
+.purchase6-sub:hover{
+    color: black;
+}
+}
+.purchase7-sub:hover{
+    color: black;
+}
+}
+.purchase8-sub:hover{
+    color: black;
+}
