--- a/style.css
+++ b/style.css
@@ -245,30 +245,31 @@ body{
     color: black;
 }
 
-.purchase2-sub:hover{
+.purchase-sub:hover{
     color: black;
 }
 
-.purchase3-sub:hover{
+.purchase-sub:hover{
     color: black;
 }
 
-.purchase4-sub:hover{
+.purchase-sub:hover{
     color: black;
 }
 
-.purchase5-sub:hover{
+.purchase-sub:hover{
     color: black;
 }
 
-.purchase6-sub:hover{
+.purchase-sub:hover{
     color: black;
 }
 
-.purchase7-sub:hover{
+.purchase-sub:hover{
     color: black;
 }
-.purchase8-sub:hover{
+.purchase-sub:hover{
     color: black;
 }
+
 
